// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exportOptionsReducer should initialize to no options set 1`] = `
Object {
  "alfred": false,
  "atomSyntax": false,
  "hyper": false,
  "iterm": false,
  "slack": false,
  "sublimeText": false,
  "terminal": false,
  "vim": false,
  "vimLightline": false,
  "vsCode": false,
  "wallpaperBlockWave": false,
  "wallpaperOctagon": false,
  "wallpaperTriangles": false,
}
`;

exports[`exportOptionsReducer should properly set an option 1`] = `
Object {
  "alfred": false,
  "atomSyntax": false,
  "hyper": true,
  "iterm": false,
  "slack": false,
  "sublimeText": false,
  "terminal": false,
  "vim": false,
  "vimLightline": false,
  "vsCode": false,
  "wallpaperBlockWave": false,
  "wallpaperOctagon": false,
  "wallpaperTriangles": false,
}
`;
